tests/ui/concurrent_cached_expires_malformed_ttl.stderr
error: `expires` and `ttl` are mutually exclusive - `expires` delegates expiry to the value via the `Expires` trait
 --> tests/ui/concurrent_cached_expires_malformed_ttl.rs:8:4
  |
8 | fn my_fn(x: u32) -> Result<u32, String> {
  |    ^^^^^
